--- a/vistas/parteinferiorvistas.css
+++ b/vistas/parteinferiorvistas.css
@@ -4,9 +4,9 @@
     height: 5rem;
     padding: 1rem;
 
-    font-size: large;
+    font-size: x-large;
 
-    display: end;
-    align-items: end;
-    justify-content: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
