--- a/vistas/cuerpovistas.css
+++ b/vistas/cuerpovistas.css
@@ -1,12 +1,23 @@
 .Cuerpo {
-    border: 1px solid black;
-    background-color: white;
-    height: 50rem;
-    padding: 1rem;
-
-    font-size: large;
-
-    display: flex;
-    align-items: top;
-    justify-content: left;
+    display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 10px;
+  margin-bottom: 20px;
 }
+.foto {
+    width: 15rem;
+    height: 15rem;
+  
+    border: 1px solid black;
+    border-radius: 3px;
+    color: white;
+    
+  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px;
+    max-width: 600px;
+    margin: auto;
+}
+
+
